# pytrait

./: .gitignore  pyproject.toml
examples/: blanket_impl.py  enums.py
pytrait/: __init__.py  enum.py  trait.py
src/pytrait/: __init__.py  enum.py  errors.py  impl.py  runtime.py
src/pytrait.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
