[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytrait"
version = "0.0.4"
description = "A Rust-inspired trait system for Python"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "PyTrait Authors", email = "maintainers@example.com" }
]
keywords = ["traits", "rust-like", "metaclass", "abc", "dataclass"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.7"

# List runtime dependencies here (if any).
dependencies = [
  "debugpy>=1.7.0",
  "pytest>=7.4.4",
  "result>=0.11.0",
]

# Optional dependency groups, e.g., test dependencies:
[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
]
dev = [
  "pytrait-dev @ file:///Users/mac.w/src/pytrait-dev/dist/pytrait_dev-0.1.0.tar.gz",
]

[project.urls]
"Source Code" = "https://github.com/YourUser/pytrait"
"Issues" = "https://github.com/YourUser/pytrait/issues"

[tool.setuptools]
# Specify the src/ directory as the package root
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
